--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version": 3,
     "name": "GomeetPlus",
-    "description": "GomeetPlus allows you to see the chat messages while you share the screen or perform another task by activating chat notifications, it also allows you to know the participants who could not attend your meeting, implementing your list of participants in excel format. This extension is ideal if you teach using google meet",
+    "description": "Allows you to view chat messages on the screen by activating notifications, list the absent by uploading participants in csv format.",
     "version": "1.0.0",
     "author": "Juan Gabriel Machuca",
     "action": {
@@ -9,7 +9,7 @@
         "default_icon": {
             "16": "images/icons/icon16.png",
             "32": "images/icons/icon32.png",
-            "48": "images/icons/icon48.png",
+            "48": "images/icons/icon48.png",    
             "128": "images/icons/icon128.png"
         }
     },
