--- a/manifest.json
+++ b/manifest.json
@@ -20,7 +20,8 @@
         "128": "images/icons/icon128.png"
     },
     "background": {
-        "service_worker": "background.js"
+        "service_worker": "background.js",
+        "script": ["background.js", "scripts/read-excel-file.min.js"]
     },
     "permissions": [
         "notifications",
